added bottom nav bars on everything and added fonts

--- a/Dodoplier/app/src/main/res/values/strings.xml
+++ b/Dodoplier/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Dodoplier</string>
+
+    <string name="nav_bar_one">Donate</string>
+    <string name="nav_bar_two">Favorites</string>
+    <string name="nav_bar_three">Profile</string>
+
 </resources>
