finished front end of org explorer page

--- a/Dodoplier/app/src/main/res/values/strings.xml
+++ b/Dodoplier/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="nav_bar_two">Favorites</string>
     <string name="nav_bar_three">Profile</string>
 
+    <string name="explore_causes_title">"Which cause wants some love today?</string>
+    <string name="explore_causes_subtitle">"Choose your impact."</string>
+
+    <string name="explore_orgs_subtitle">"Here are five charities you can trust."</string>
+
 </resources>
