--- a/Dodoplier/app/src/main/res/values/strings.xml
+++ b/Dodoplier/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Dodoplier</string>
+    <string name="app_name">snowballer</string>
 
     <string name="nav_bar_one">Donate</string>
     <string name="nav_bar_two">Favorites</string>
